Fix sidenote wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,10 @@ section#comments > h2:hover:before {
   line-height: 1.3;
   margin-right: calc(-50vw + 360px);
   color: #616161;
-  overflow-wrap: break-word;
+  white-space: nowrap;
+}
+.sidenote .text {
+  white-space: normal;
 }
 .even-sidenote {
   float: left;
